<resources>
    <string name="app_name">Tab Calculator</string>
    <string name="title_traverse">Traverse</string>
    <string name="title_psychometric">Psychometric</string>
    <string name="title_affinity_laws">Affinity Laws</string>
    <string name="title_Calculate">Calculate</string>
    <string name="title_Clear">Clear</string>
    <string name="hint_altitude">Altitude</string>
    <string name="hint_dry_bulb">Dry Bulb</string>
    <string name="hint_wet_bulb">Wet Bulb</string>
    <string name="hint_duct_size">Duct Size</string>
    <string name="hint_rectangle">Rectangle</string>
    <string name="hint_traverse_method">Traverse Method</string>

    <string-array name="traverse_methods">
        <item>Rectangle</item>
        <item>Round</item>
        <item>Logarithmic></item>
    </string-array>
</resources>